# EpiAgent

./: .env.example  .gitignore  LICENSE  README.md  blog_post.md  dashboard_covid_19.html  dashboard_influenza.html  dashboard_measles.html  epiagent_dashboard.html  epiagent_kaggle_notebook.ipynb  generate_audio.py  generate_kaggle_notebook.py  generate_video.py  pyproject.toml  run_demo.py  run_multi_pathogen.py
epiagent/: __init__.py  agent.py
epiagent/agents/: __init__.py  tools.py
epiagent/dashboard/: __init__.py  generator.py
epiagent/engines/: __init__.py  changepoint_detector.py  epi_metrics.py  explainability.py  ml_forecaster.py  rt_estimation.py  seir_model.py
epiagent/guardrails/: __init__.py  security.py
epiagent/schemas/: __init__.py  surveillance.py
epiagent/validators/: __init__.py  epi_validator.py
mcp_server/: __init__.py  server.py
mcp_server/data_sources/: __init__.py  cdc_fluview.py  synthetic.py
tests/: __init__.py  test_changepoint_detector.py  test_epi_metrics.py  test_epi_validator.py  test_explainability.py  test_ml_forecaster.py  test_rt_estimation.py  test_security.py  test_seir_model.py
