[project]
name = "epiagent"
version = "0.1.0"
description = "Secure Multi-Agent Epidemic Surveillance & Predictive Modeling System"
readme = "README.md"
license = {text = "Apache-2.0"}
requires-python = ">=3.10"
authors = [
    {name = "EpiAgent Team"}
]
keywords = ["epidemiology", "surveillance", "multi-agent", "public-health", "adk"]

dependencies = [
    # Google ADK & GenAI
    "google-adk>=1.0.0",
    "google-genai>=1.0.0",

    # MCP Server
    "mcp[cli]>=1.0.0",

    # Scientific Computing
    "numpy>=1.24.0",
    "scipy>=1.10.0",
    "pandas>=2.0.0",

    # ML & Forecasting
    "prophet>=1.1.0",
    "xgboost>=2.0.0",
    "scikit-learn>=1.3.0",
    "shap>=0.43.0",

    # Visualization
    "plotly>=5.18.0",
    "kaleido>=0.2.1",

    # Data Validation
    "pydantic>=2.0.0",

    # HTTP
    "requests>=2.31.0",
    "httpx>=0.25.0",

    # Utilities
    "python-dotenv>=1.0.0",
    "rich>=13.0.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0.0",
    "pytest-asyncio>=0.21.0",
    "pytest-cov>=4.1.0",
    "ruff>=0.1.0",
]
lstm = [
    # Stretch goal: LSTM forecasting
    "torch>=2.0.0",
]

[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.backends._legacy:_Backend"

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"

[tool.ruff]
line-length = 100
target-version = "py310"
